<resources>
    <string name="app_name">Delta Chat</string>
    <string name="enter_email">E-mail</string>
    <string name="enter_password">Password</string>
    <string name="display_name">Username(Used as display name in you profile and chats)</string>
    <string name="logout_menuitem">Logout</string>
    <string name="Search_menu_button">Search People</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account_settings">Account Settings</string>
    <string name="send_friend_request">Send Friend Request</string>
    <string name="cancel_friend_request">Cancel Friend Request</string>
    <string name="accept_friend_request">Accept Friend Request</string>
    <string name="unfriend">Unfriend this person</string>
    <string name="need_a_new_account_button">NEED A NEW ACCOUNT?</string>
    <string name="welcome_to_delta_chat">Welcome to Delta Chat</string>
    <string name="already_have_account_button">ALREADY HAVE ACCOUNT</string>
</resources>
