<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_weight="1"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30dp">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:paddingBottom="20sp"
        android:text="@string/welcome_to_delta_chat"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="30sp" />

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:backgroundTint="@color/colorAccent"
        android:textSize="12sp"

        android:text="@string/need_a_new_account_button"

        android:textColor="@color/colorPrimary"

        android:textStyle="bold" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:textSize="12sp"
        android:padding="10dp"
        android:text="@string/already_have_account_button"
        android:textColor="@color/colorAccent"
        android:textStyle="bold" />




</LinearLayout>