<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="40dp"
            android:paddingLeft="20dp"
            android:textColor="@color/white"

            android:paddingTop="40dp"
            android:paddingBottom="40dp"

            android:text="Create new account"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="25sp"
            android:textStyle="bold" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/display_nameSignUp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="5dp"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText

                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:hint="@string/display_name"
                android:padding="12dp"
                app:errorTextAppearance="@android:color/holo_red_dark"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/enter_emailSignUP"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="5dp"
            app:errorEnabled="true"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                app:errorTextAppearance="@android:color/holo_red_dark"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/enter_passwordSignUp"

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="5dp"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:padding="12dp"
                app:errorTextAppearance="@android:color/holo_red_dark"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/sign_up_activity_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColor="@color/colorAccent"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:padding="20dp"
            android:textStyle="bold"
            android:text="Sign up"
            android:textAllCaps="false"
            android:textSize="20sp" />

    </LinearLayout>


</LinearLayout>